Добавил изменения на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -79,7 +79,7 @@
 	<div class="goods clearfix">
 			<div class="case-catalog">
 				<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-				<span class="cost">310 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">310 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -87,7 +87,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-				<span class="cost">380 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">380 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -95,7 +95,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-				<span class="cost">355 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">355 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -103,7 +103,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-				<span class="cost">415 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">415 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -111,7 +111,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-				<span class="cost">325 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">325 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с брусничным джемом</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-				<span class="cost">410 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">410 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -127,7 +127,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-				<span class="cost">375 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">375 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div>
 				<a class="btn-show-catalog" class="specification" href="#" class="fastsee">Быстрый просмотр</a>
@@ -135,7 +135,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-				<span class="cost">320 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">320 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -143,7 +143,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-				<span class="cost">440 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">440 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -151,7 +151,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-				<span class="cost">435 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">435 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -159,7 +159,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-				<span class="cost">355 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">355 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
@@ -167,7 +167,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-				<span class="cost">420 <!--Как знак рубля ставить?--> / кг</span>
+				<span class="cost">420 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
 				<a class="specification" href="#">Сливочное с мятным сиропом</a>
 				<div>
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
