сделал пиксел перфект

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div class="promo clearfix">
 		<div class="promo-action">
 			<span>Малинка даром!</span>
-			<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+			<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 			<a class="btn-want-jam" href="#">Хочу варенье!</a>
 		</div>
 		<div class="promo-action">
@@ -77,26 +77,26 @@
 	<div class="catalog clearfix">
 		<section class="catalog-ice"><!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
-			<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-			<span class="cost">310 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> /кг</span>
+			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span></span>
 			<p class="specification">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
 		</section>	
 		<section class="catalog-ice">
 		<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
-			<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-			<span class="cost">380 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> /кг</span>
+			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
+			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
-			<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-			<span class="cost">355 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> /кг</span>
+			<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+			<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
-			<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-			<span class="cost">415 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> /кг</span>
+			<img src="img/ice_4.jpg" width="265" height="265" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
+			<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
 		</section>
 	<!--/Блок самых покупаемых мороженных-->
@@ -108,25 +108,23 @@
 		</div>
 		<div class="make">
 			<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-			<p>Для приготовления мороженного используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+			<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 		</div>
 		<div class="delivery"> <!--delivery доставка-->
 			<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-			<p>Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+			<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 		</div>
 	<!--/Блок описания компании-->
 	</div>
 	<!--Блок новостей и подписка на рассылку-->
 	<div class="news-sub clearfix">
-		
-		<section class="news">
-		
-			<p>Новое в нашем блоке</p>
+		<section class="news">		
+			<p>Новое в нашем блоге</p>
 			<a href="#">10 способов сервировки фруктовых щербетов к столу</a>
 		</section>
 		<section class="sub">
 		<div class="white-layer">
-			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно=)</p>
+			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
 			<form action="https://echo.htmlacademy.ru" method="get">
 				<input type="Text" name="email" placeholder="Электронная почта">
 				<button class="btn-send" name="send">Отправить</button>
@@ -140,17 +138,18 @@
 	<!--Блок проезда-адреса-->
 	<div class="driving-address">
 		<div class="driving">
-			<div class="line">
+			<div class="top-lines">
 			<span class="line-1">Адрес главного офиса и<br>
 								Офлайн магазина</span><br>
 			<span class="line-2">ул. Большая Конющенная<br>
 								19/8б Санкт-Петербург</span><br>
 			</div>
-			<div>
+			<div class="bottom-lines">
 			<span class="line-1">Для заказов по телефону:</span><br>
 			<span class="line-2">8 812 450-25-25</span><br>
-			<span class="line-1">(с 10 до 20 ежедневно)</span><br>
+			
 			</div>
+			<span class="line-1">(с 10 до 20 ежедневно)</span><br>
 			<a class="btn-feedback" href="#">Форма обратной связи</a>
 		</div>
 	<!--/Блок проезда-адреса-->	
