--- a/catalog.html
+++ b/catalog.html
@@ -174,12 +174,14 @@
 				</div>
 			</div>
 			<div class="catalog-pages">
-				<ul>
-					<li><a href"#">1</a></li>
-					<li><a href"#">2</a></li>
-					<li><a href"#">3</a></li>
-					<li><a href"#">4</a></li>
-					<li><a href"#">5</a></li>
+				<ul class="pages-ices">
+					<li><a class="prev disabled" href="#prev">Назад</a></li>
+					<li><a class="active-page hover" href"#">1</a></li>
+					<li><a class="hover" href"#">2</a></li>
+					<li><a class="hover" href"#">3</a></li>
+					<li><a class="hover" href"#">4</a></li>
+					<li><a class="hover" href"#">5</a></li>
+					<li><a class="next" href="#next">Вперёд</a></li>
 				</ul>
 			</div>
 	<!--/Блок ассортимента мороженных-->
