Поправил пиксел перфект на index

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 	<div class="driving-address">
 		<div class="driving">
 			<div class="top-lines">
-			<span class="line-1">Адрес главного офиса и<br>
-								Офлайн магазина</span><br>
+			<span class="line-1">Адрес главного офиса<br>
+								и офлайн магазина</span><br>
 			<span class="line-2">ул. Большая Конющенная<br>
-								19/8б Санкт-Петербург</span><br>
+								19/8, Санкт-Петербург</span><br>
 			</div>
 			<div class="bottom-lines">
 			<span class="line-1">Для заказов по телефону:</span><br>
