--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span></span>
-			<p class="specification">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
+			<p class="specification underline">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
 		</section>	
 		<section class="catalog-ice">
-		<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
+			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
 			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
