--- a/catalog.html
+++ b/catalog.html
@@ -206,7 +206,8 @@
 				</ul>
 			</section>
 			<section class="footer-copyright">
-				<a class="btn-copyright" href="https://htmlacademy.ru">HTML Academy</a>
+				<a class="btn-copyright" href="https://htmlacademy.ru"><img src="img/made_footer.png" width="108" height="38" class="big-ice" alt="Эмблема HTML Academy"></a>
+				<!--<a class="btn-copyright" href="https://htmlacademy.ru">HTML Academy</a>-->
 				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
 			</section>
 		</div>
