--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 				</ul>
 			</section>
 			<section class="footer-copyright">
-				<a class="btn-copyright" href="https://htmlacademy.ru">HTML Academy</a>
-				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
+				<a class="btn-copyright" href="https://htmlacademy.ru"><img src="img/made_footer.png" width="108" height="38" class="big-ice" alt="Эмблема HTML Academy"></a>
+				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2017</p>
 			</section>
 		</div>
 	</footer>
