--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<div class="white-layer">
 			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
 			<form action="https://echo.htmlacademy.ru" method="get">
-				<input type="Text" name="email" placeholder="Электронная почта">
+				<input type="email" name="email" placeholder="Электронная почта">
 				<button class="btn-send" name="send">Отправить</button>
 			</form>
 		</div>
@@ -186,13 +186,13 @@
 		<!--Форма поиска-->
 	<div class="modal-search">
 		<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-			<input class="search" type="text" name="search" placeholder="Что ищем?">
+			<input class="search" type="search" name="search" placeholder="Что ищем?">
 		</form>
 	</div><!--/Форма поиска-->
 		<!--Форма входа-->
 	<div class="modal-in">
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
-			<input class="email" type="text" name="email" placeholder="Электронная почта">
+			<input class="email" type="email" name="email" placeholder="Электронная почта">
 			<input class="password" type="password"  name="password" placeholder="Пароль">
 			<button class="btn-modal-in" type="submit" title="Войти">Войти</button>
 		</form>
@@ -212,7 +212,7 @@
 		<h2>Мы обязательно вам ответим!</h2>
 		<form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
 			<input class="feedback-name" type="text" name="feedback-name" placeholder="Как вас зовут?">
-			<input class="feedback-email" type="text" name="feedback-email" placeholder="Ваша почта для ответа?">
+			<input class="feedback-email" type="email" name="feedback-email" placeholder="Ваша почта для ответа?">
 			<textarea class="feedback-text" name="feedback-text" rows="6" placeholder="Напишите что-нибудь..."></textarea>
 			<button class="btn-modal-feedback" type="submit" title="Отправить">Отправить</button>
 		</form>
